crates/hpc-core/tests/compile-fail/api_wait_on_ready.stderr
warning: unused import: `Kernel`
 --> tests/compile-fail/api_wait_on_ready.rs
  |
  | use hpc_core::api::{Context, Kernel};
  |                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
 --> tests/compile-fail/api_wait_on_ready.rs
  |
  |     let _back_to_ready = q.wait(ev, ready);
  |                            ----     ^^^^^ expected `DeviceBuffer<_, InFlight>`, found `DeviceBuffer<u32, Ready>`
  |                            |
  |                            arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<_, InFlight>`
             found struct `DeviceBuffer<u32, hpc_core::Ready>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn wait<T>(
  |            ^^^^
